test/valid/66358_if_then/if_then.mag
-- Author: 66358, Gustavo Cardoso

fun t (x) : Int -> Unit =
  if x > 100 then print(100);
  if x < 0 then print(0)
fun main (_) : Unit -> Unit = t(200)