test/invalid-syntax/66358_missing_declaration/missing_declaration.mag
-- Author: 66358, Gustavo Cardoso

const x : Int 5